# dr-copilot

./: .gitignore  README.md  evaluate_recommendations.py  generate_recommendations.py  optimize.py  pyproject.toml
configs/: base.py
configs/optimize_scorer/v4/: bootstrap_fewshot_gemma_27b.py  bootstrap_fewshot_medgemma_27b.py  fewshot_gemma_27b.py  selective_fewshot_gemma_12b.py  selective_fewshot_gemma_27b.py  selective_fewshot_gemma_27b_5_shot.py  selective_fewshot_gemma_27b_COT.py  selective_fewshot_medgemma_27b_4_shot.py  simba_gemma_27b.py  simba_medgemma_27b.py  simba_medgemma_27b_full_dataset.py
configs/recommend/: recommender_config.py  recommender_config_gemma_12b_v4.py  recommender_config_gemma_27b.py  recommender_config_gemma_27b_v4.py  recommender_config_medgemma.py  recommender_config_medgemma_v2_recommender.py  scorer_simba_medgemma_recommender_gemma_12b.py  scorer_simba_medgemma_recommender_gemma_27b.py
dataloaders/: prompt_score_v2_loader.py  recommendation_loader.py
models/: prompt_score_v4.py  recommender_v2.py  reconciliator.py
optimizers/: base.py  bootstrap_fewshot_optimizer.py  fewshot_optimizer.py  simba_optimizer.py
